--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "install": "^0.13.0",
-    "npm": "^9.6.0",
     "lts": "^1.2.0",
     "n": "^9.0.1",
     "node": "^19.6.1",
+    "npm": "^9.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
