--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "^19.6.1",
     "npm": "^9.6.0",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
